# sfml-calculator

./: CMakeLists.txt  README.md  test.cpp
includes/: application.hpp  assets.hpp  calc.hpp  clipboard.hpp  core.hpp  entities.hpp  helpers.hpp  input.hpp  ui_elements.hpp  utils.hpp
src/: application.cpp  assets.cpp  calc.cpp  clipboard.cpp  core.cpp  entities.cpp  helpers.cpp  input.cpp  main.cpp  ui_elements.cpp  utils.cpp
src/headers/: entities.hpp  helpers.hpp
